fixed layout issues

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -6,12 +6,13 @@
 
 body {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
+    padding-bottom: 10px;
 }
 
 html {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 }
 
 @media(min-width:767px) {
@@ -31,16 +32,17 @@ html {
 The padding is very important to make sure the scrollspy picks up the right area when scrolled to. Adjust the margin and padding of sections and children 
 of those sections to manage the look and feel of the site. */
 
-.intro-section {
+section.intro-section {
     height: 100%;
     padding-top: 150px;
+    padding-bottom: 10px;
     text-align: center;
     background: #fff;
 }
 
 .publications-section {
     height: 100%;
-    padding-top: 150px;
+    padding-top: 100px;
     text-align: center;
     background: #eee;
 }
